--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                     xmlns:cc="using:MyerSplashCustomControl"
+                    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <FontFamily x:Key="PhoneFontFamilyNormal">Segoe WP</FontFamily>
     <FontWeight x:Key="PhoneButtonFontWeight">Semibold</FontWeight>
@@ -18,11 +19,11 @@
         <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
         <Setter Property="FontWeight" Value="Black" />
     </Style>
-    <Style x:Key="MainButtonStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
+    <fcu:Style x:Key="MainButtonStyle" TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
         <Setter Property="BorderThickness" Value="{StaticResource RevealThinkness}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="RequestedTheme" Value="Dark"/>
-    </Style>
+    </fcu:Style>
     <Style x:Key="MainButtonCompatStyle" TargetType="Button" BasedOn="{StaticResource ButtonCommonStyle}">
         <Setter Property="BorderThickness" Value="{StaticResource RevealThinkness}"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -366,39 +367,39 @@
                                 <VisualState x:Name="Selected">
                                     <Storyboard>
                                         <!--<ColorAnimation
-                                            Storyboard.TargetName="InnerGrid"
-                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource ListButtonSelected}" />-->
+                                             Storyboard.TargetName="InnerGrid"
+                                             Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                             To="{StaticResource ListButtonSelected}" />-->
                                         <ColorAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(ContentPresenter.Foreground).(SolidColorBrush.Color)"
                                             To="White" />
                                         <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetName="SelectedBorder" Storyboard.TargetProperty="Visibility">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible" />
-                                        </ObjectAnimationUsingKeyFrames>-->
+                                             <DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible" />
+                                             </ObjectAnimationUsingKeyFrames>-->
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="SelectedUnfocused">
                                     <Storyboard>
                                         <!--<ColorAnimation
-                                            Storyboard.TargetName="InnerGrid"
-                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                            To="{StaticResource ListButtonSelected}" />-->
+                                             Storyboard.TargetName="InnerGrid"
+                                             Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                             To="{StaticResource ListButtonSelected}" />-->
                                         <ColorAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(ContentPresenter.Foreground).(SolidColorBrush.Color)"
                                             To="White" />
                                         <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetName="SelectedBorder" Storyboard.TargetProperty="Visibility">
-                                            <DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible" />
-                                        </ObjectAnimationUsingKeyFrames>-->
+                                             <DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible" />
+                                             </ObjectAnimationUsingKeyFrames>-->
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="SelectedDisabled">
                                     <Storyboard>
                                         <!--<ColorAnimation
-                                            Storyboard.TargetName="InnerGrid"
-                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                            To="{ThemeResource SystemBaseMediumColor}" />-->
+                                             Storyboard.TargetName="InnerGrid"
+                                             Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                             To="{ThemeResource SystemBaseMediumColor}" />-->
                                         <ColorAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(ContentPresenter.Foreground).(SolidColorBrush.Color)"
@@ -408,9 +409,9 @@
                                 <VisualState x:Name="SelectedPointerOver">
                                     <Storyboard>
                                         <!--<ColorAnimation
-                                            Storyboard.TargetName="InnerGrid"
-                                            Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
-                                            To="{ThemeResource ListButtonPointOver}" />-->
+                                             Storyboard.TargetName="InnerGrid"
+                                             Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)"
+                                             To="{ThemeResource ListButtonPointOver}" />-->
                                         <ColorAnimation
                                             Storyboard.TargetName="ContentPresenter"
                                             Storyboard.TargetProperty="(ContentPresenter.Foreground).(SolidColorBrush.Color)"
@@ -431,15 +432,15 @@
                                 </VisualState>
                             </VisualStateGroup>
                             <!--<VisualStateGroup x:Name="FocusStates">
-                                <VisualState x:Name="Focused">
-                                    <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="FocusVisualWhite" Storyboard.TargetProperty="Opacity" To="1" Duration="0" />
-                                        <DoubleAnimation Storyboard.TargetName="FocusVisualBlack" Storyboard.TargetProperty="Opacity" To="1" Duration="0" />
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Unfocused" />
-                                <VisualState x:Name="PointerFocused" />
-                            </VisualStateGroup>-->
+                                 <VisualState x:Name="Focused">
+                                 <Storyboard>
+                                 <DoubleAnimation Storyboard.TargetName="FocusVisualWhite" Storyboard.TargetProperty="Opacity" To="1" Duration="0" />
+                                 <DoubleAnimation Storyboard.TargetName="FocusVisualBlack" Storyboard.TargetProperty="Opacity" To="1" Duration="0" />
+                                 </Storyboard>
+                                 </VisualState>
+                                 <VisualState x:Name="Unfocused" />
+                                 <VisualState x:Name="PointerFocused" />
+                                 </VisualStateGroup>-->
                         </VisualStateManager.VisualStateGroups>
                     </Border>
                 </ControlTemplate>
